Fixed several UI bugs mainly occuring in the Contact Us page. Fixed image height where it would occaisionally be cut off

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -85,6 +85,9 @@ body, html{
    padding: 0;
    margin: 0;
 }
+body {
+	overflow-x:hidden; 
+}
 .whitecontainer{
 	height: 85.5%;
 	width: 100%;
@@ -168,7 +171,9 @@ body, html{
     background-size: 40px;
     cursor: pointer;
 }
-
+.pageContainer{
+	max-height: 1000px;
+}
 .HomeContent{
 	width:42.85%;
 	min-width: 585px;
@@ -399,17 +404,23 @@ vertical-align: top;
 /*Contact Us*/
 #Contactus
 {
-	background: url(../images/ContactUsBG.png) no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
+	background-color: transparent !important;
+	width: 100%;
+	height: auto;
+}
+img#contactUsBackground {
+	min-height: 100%;
+	min-width: 1000px;
+	width: 100%;
+	height: auto;
+	display: inline;
+	top: 0;
+	position: absolute;
+	z-index: -100000;
 }
 #formcontainer
 {
 	width: 45%;
-	height: 80%;
 	display: block;
 	position: relative;
 	margin: 0 auto;
@@ -543,6 +554,9 @@ input[type=submit] {
 	}
 	.bgimg{
 		min-height: 500px;
+	}
+	img#contactUsBackground {
+		min-width: 600px
 	}
 	#formcontainer {
 		width: 80%;
